# Mesh

./: .envrc  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  PLAN-crossover.md  PLAN.md  README.md  TODO.md  distrobox.ini  feedback.md  flake.nix  index.html  midi-control.pd  notes  release.toml  sample-delay.pd  test.pd  todos
.cargo/: config.toml
crates/mesh-core/: Cargo.toml
crates/mesh-core/src/: buffer_pool.rs  genre_map.rs  graph_compute.rs  lib.rs  migration.rs  resource_monitor.rs  rt.rs  types.rs
crates/mesh-core/src/audio/: backend.rs  config.rs  cpal_backend.rs  device.rs  error.rs  jack_backend.rs  mod.rs
crates/mesh-core/src/audio_file/: mod.rs
crates/mesh-core/src/clap/: discovery.rs  effect.rs  error.rs  mod.rs  multiband.rs  plugin.rs
crates/mesh-core/src/config/: io.rs  loudness.rs  mod.rs  paths.rs
crates/mesh-core/src/db/: batch.rs  migration.rs  mod.rs  queries.rs  schema.rs  service.rs
crates/mesh-core/src/effect/: mod.rs  multiband.rs
crates/mesh-core/src/effect/native/: crossover.rs  delay.rs  filter.rs  gain.rs  mod.rs  reverb.rs  svf.rs
crates/mesh-core/src/engine/: command.rs  deck.rs  engine.rs  gc.rs  latency.rs  linked_stem.rs  master_clipper.rs  master_limiter.rs  mixer.rs  mod.rs  scratch.rs  slicer.rs
crates/mesh-core/src/export/: message.rs  mod.rs  service.rs
crates/mesh-core/src/features/: extraction.rs  mod.rs
crates/mesh-core/src/loader/: linked_stem.rs  mod.rs
crates/mesh-core/src/music/: mod.rs
crates/mesh-core/src/pd/: discovery.rs  effect.rs  error.rs  instance.rs  manager.rs  metadata.rs  mod.rs
crates/mesh-core/src/playlist/: database.rs  filesystem.rs  mod.rs
crates/mesh-core/src/preset_loader/: build.rs  mod.rs
crates/mesh-core/src/recording/: mod.rs  writer.rs
crates/mesh-core/src/services/: feature_extraction.rs  messages.rs  mod.rs  query.rs  watch.rs
crates/mesh-core/src/suggestions/: aggression.rs  config.rs  mod.rs  query.rs  scoring.rs
crates/mesh-core/src/timestretch/: mod.rs
crates/mesh-core/src/usb/: cache.rs  config.rs  detection.rs  manager.rs  message.rs  mod.rs  mount.rs  storage.rs  sync.rs
crates/mesh-cue/: Cargo.toml  build.rs
crates/mesh-cue/src/: audio.rs  batch_import.rs  collection.rs  config.rs  export.rs  import.rs  keybindings.rs  lib.rs  main.rs  pca.rs  reanalysis.rs
crates/mesh-cue/src/analysis/: algorithm.rs  beatgrid.rs  bpm.rs  key.rs  loudness.rs  mod.rs  python.rs
crates/mesh-cue/src/domain/: mod.rs  state.rs
crates/mesh-cue/src/features/: extraction.rs  mod.rs
crates/mesh-cue/src/loader/: mod.rs  regions.rs
crates/mesh-cue/src/metadata/: filename.rs  mod.rs  tags.rs
crates/mesh-cue/src/ml_analysis/: beat_inference.rs  inference.rs  mod.rs  models.rs  preprocessing.rs  voice.rs
crates/mesh-cue/src/separation/: backend.rs  config.rs  demucs.md  error.rs  mod.rs  model.rs  postprocess.rs  service.rs
crates/mesh-cue/src/ui/: app.rs  calibration_modal.rs  collection_browser.rs  context_menu.rs  cue_editor.rs  delete_modal.rs  editor.rs  effect_picker.rs  export_modal.rs  import_modal.rs  message.rs  mod.rs  plugin_gui.rs  saved_loop_buttons.rs  settings.rs  staging.rs  transport.rs  waveform.rs
crates/mesh-cue/src/ui/effects_editor/: mod.rs  state.rs  view.rs
crates/mesh-cue/src/ui/handlers/: browser.rs  calibration.rs  delete.rs  editing.rs  effect_picker.rs  effects_editor.rs  export.rs  graph.rs  import.rs  keyboard.rs  mod.rs  playback.rs  reanalysis.rs  settings.rs  similarity.rs  slicer.rs  stem_links.rs  tick.rs  track_loading.rs
crates/mesh-cue/src/ui/modals/: mod.rs  overlay.rs
crates/mesh-cue/src/ui/slicer_editor/: mod.rs  state.rs  view.rs
crates/mesh-cue/src/ui/state/: calibration.rs  collection.rs  export.rs  import.rs  loaded_track.rs  mod.rs  reanalysis.rs  settings.rs
crates/mesh-cue/src/ui/utils/: beat_grid.rs  mod.rs  tree.rs
crates/mesh-midi/: Cargo.toml
crates/mesh-midi/src/: config.rs  connection.rs  deck_target.rs  detection.rs  direct_dispatch.rs  feedback.rs  feedback_worker.rs  input.rs  learn_catalog.rs  learn_defs.rs  lib.rs  mapping.rs  messages.rs  normalize.rs  output.rs  rt.rs  shared_state.rs  types.rs
crates/mesh-midi/src/hid/: mod.rs  thread.rs
crates/mesh-midi/src/hid/devices/: kontrol_f1.rs  mod.rs
crates/mesh-midi/src/midi/: input.rs  mod.rs  output.rs
crates/mesh-player/: Cargo.toml
crates/mesh-player/src/: audio.rs  config.rs  direct_dispatch.rs  loader.rs  main.rs  suggestions.rs
crates/mesh-player/src/domain/: mod.rs
crates/mesh-player/src/history/: mod.rs
crates/mesh-player/src/loader/: mod.rs  regions.rs
crates/mesh-player/src/plugin_gui/: mod.rs
crates/mesh-player/src/ui/: app.rs  collection_browser.rs  deck_view.rs  effect_picker.rs  file_browser.rs  message.rs  midi_learn.rs  midi_learn_tree.rs  mixer_view.rs  mod.rs  network.rs  player_canvas.rs  settings.rs  system_update.rs  theme.rs  waveform.rs
crates/mesh-player/src/ui/handlers/: browser.rs  deck_controls.rs  led_feedback.rs  midi_learn.rs  mixer.rs  mod.rs  multiband.rs  network.rs  settings.rs  system_update.rs  tick.rs  track_loading.rs
crates/mesh-player/src/ui/state/: mod.rs
crates/mesh-widgets/: Cargo.toml
crates/mesh-widgets/src/: browser_canvas.rs  button_styles.rs  energy_arc.rs  font.rs  keyboard.rs  lib.rs  rotary_knob.rs  subscription.rs  theme.rs  traits.rs
crates/mesh-widgets/src/deck_preset/: message.rs  mod.rs  view.rs
crates/mesh-widgets/src/graph_view/: layout.rs  mod.rs
crates/mesh-widgets/src/knob/: knob.wgsl  mod.rs  pipeline.rs
crates/mesh-widgets/src/multiband/: config.rs  crossover_bar.rs  message.rs  mod.rs  state.rs  view.rs
crates/mesh-widgets/src/playlist_browser/: mod.rs
crates/mesh-widgets/src/slice_editor/: config.rs  mod.rs  state.rs  view.rs
crates/mesh-widgets/src/stem_preset/: message.rs  mod.rs  view.rs
crates/mesh-widgets/src/track_table/: mod.rs
crates/mesh-widgets/src/tree/: mod.rs
crates/mesh-widgets/src/waveform/: canvas.rs  mod.rs  peak_computation.rs  peaks.rs  peaks_computer.rs  slicer_overlay.rs  state.rs  view.rs
docs/: effects.md  (+6 more)
(+89 files in other folders)
