[workspace]
resolver = "2"
members = [
    "crates/mesh-core",
    "crates/mesh-widgets",
    "crates/mesh-midi",
    "crates/mesh-player",
    "crates/mesh-cue",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mesh Team"]
license = "AGPL-3.0-or-later"

[workspace.dependencies]
rtrb = "0.3"
jack = "0.13.4"
libpd-rs = "0.2.0"
signalsmith-stretch = "0.1.3"
riff = "2.0.0"
iced = { version = "0.14.0", features = ["canvas", "tokio", "advanced"] }
tokio = { version = "1.0", features = ["sync", "rt-multi-thread"] }
mesh-core = { path = "crates/mesh-core" }
mesh-widgets = { path = "crates/mesh-widgets" }

# mesh-cue dependencies
essentia = "0.1.5"
rfd = "0.15"
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
dirs = "5.0"

# Enable basic optimizations for mesh-core in debug builds
# This speeds up audio loading from 6.8s to ~1s without affecting compile times much
[profile.dev.package.mesh-core]
opt-level = 1
