[workspace]
resolver = "2"
members = [
    "crates/mesh-core",
    "crates/mesh-widgets",
    "crates/mesh-midi",
    "crates/mesh-player",
    "crates/mesh-cue",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mesh Team"]
license = "AGPL-3.0-or-later"

[workspace.dependencies]
rtrb = "0.3"
# libpd-rs = "0.2.0"  # Disabled: requires libffi which has build issues with naersk
signalsmith-stretch = "0.1.3"
# CPAL for cross-platform audio (ALSA/JACK on Linux, WASAPI on Windows, CoreAudio on macOS)
# The "jack" feature enables JACK backend on Linux for pro-audio routing
cpal = { version = "0.15", features = ["jack"] }
iced = { version = "0.14.0", features = ["canvas", "tokio", "advanced"] }
tokio = { version = "1.0", features = ["sync", "rt-multi-thread"] }
mesh-core = { path = "crates/mesh-core" }
mesh-widgets = { path = "crates/mesh-widgets" }

# Database and messaging
cozo = { version = "0.7.6", features = ["storage-sqlite", "graph-algo"] }
crossbeam = "0.8"
notify = "6"
rayon = ">=1.9,<1.10"  # Pinned for graph_builder 0.4.1 compatibility (rayon 1.10+ broke API)

# mesh-cue dependencies
essentia = "0.1.5"
anyhow = "1.0"
thiserror = { version = "2.0", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
dirs = "5.0"

# Enable basic optimizations for mesh-core in debug builds
# This speeds up audio loading from 6.8s to ~1s without affecting compile times much
[profile.dev.package.mesh-core]
opt-level = 1

# Release profile optimized for distribution
# Use RUSTFLAGS="--remap-path-prefix=/nix/store=nix" to remove Nix paths
[profile.release]
strip = "symbols"      # Strip debug symbols
lto = "thin"           # Link-Time Optimization for smaller binaries
panic = "abort"        # Smaller binary, no unwinding overhead
codegen-units = 1      # Better optimization, slower compile
