[package]
name = "mesh-core"
version.workspace = true
edition.workspace = true

[dependencies]
rtrb.workspace = true
riff.workspace = true
signalsmith-stretch.workspace = true
libpd-rs.workspace = true
serde.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
dirs = "5"
rayon = "1.10"
basedrop = "0.1"  # RT-safe deferred deallocation for audio
bytemuck = { version = "1.21", features = ["derive"] }
rubato = "0.16"   # High-quality sample rate conversion
log = "0.4"

# USB device support (cross-platform)
pathdiff = "0.2"    # Relative path computation for symlinks
sysinfo = "0.33"    # Cross-platform disk detection (replaces udev/sysfs/blkid)
walkdir = "2"       # Cross-platform recursive directory traversal
symlink = "0.1"     # Cross-platform symlink creation

[dev-dependencies]
tempfile = "3.15"
