[package]
name = "mesh-core"
version.workspace = true
edition.workspace = true

[dependencies]
rtrb.workspace = true
signalsmith-stretch.workspace = true
# libpd-rs.workspace = true  # Disabled: requires libffi which has build issues with naersk
serde.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
dirs = "5"
rayon.workspace = true
basedrop = "0.1"  # RT-safe deferred deallocation for audio
bytemuck = { version = "1.21", features = ["derive"] }
rubato = "0.16"   # High-quality sample rate conversion
log = "0.4"
thiserror.workspace = true

# Cross-platform audio backend
cpal.workspace = true

# Database and messaging
cozo = { workspace = true }
crossbeam = { workspace = true }
notify = { workspace = true }
tokio = { workspace = true }  # For oneshot channels in services

# Audio analysis - Essentia bindings
essentia = "0.1.5"
essentia-sys = "0.1.5"  # For StereoSample type
procspawn = "1.0"       # Process isolation (Essentia not thread-safe)

# USB device support (cross-platform)
pathdiff = "0.2"    # Relative path computation for symlinks
sysinfo = "0.33"    # Cross-platform disk detection (replaces udev/sysfs/blkid)
walkdir = "2"       # Cross-platform recursive directory traversal
symlink = "0.1"     # Cross-platform symlink creation

[dev-dependencies]
tempfile = "3.15"
