[package]
name = "mesh-core"
version.workspace = true
edition.workspace = true

[features]
# JACK backend is default for Linux pro-audio; on other platforms it's a no-op
# Use --no-default-features for CPAL-only builds (Windows/macOS cross-compile)
default = ["jack-backend"]
# Use native JACK backend on Linux for pro-audio port routing
# When disabled, uses CPAL (which supports ALSA/PipeWire on Linux)
jack-backend = ["dep:jack"]

[dependencies]
rtrb.workspace = true
signalsmith-stretch.workspace = true
libpd-rs.workspace = true
serde_json = "1.0"  # For PD effect metadata parsing
serde.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
dirs = "5"
rayon.workspace = true
basedrop = "0.1"  # RT-safe deferred deallocation for audio
bytemuck = { version = "1.21", features = ["derive"] }
rubato = "0.16"   # High-quality sample rate conversion
log = "0.4"
thiserror.workspace = true

# CLAP plugin hosting
clack-host = { git = "https://github.com/prokopyl/clack.git" }
clack-extensions = { git = "https://github.com/prokopyl/clack.git", features = ["params", "gui", "latency", "clack-host"] }

# Cross-platform audio backend
cpal.workspace = true

# Database and messaging
cozo = { workspace = true }
crossbeam = { workspace = true }
notify = { workspace = true }
tokio = { workspace = true }  # For oneshot channels in services

# USB device support (cross-platform)
pathdiff = "0.2"    # Relative path computation for symlinks
sysinfo = "0.33"    # Cross-platform disk detection (replaces udev/sysfs/blkid)
walkdir = "2"       # Cross-platform recursive directory traversal
symlink = "0.1"     # Cross-platform symlink creation

# Native JACK backend for Linux (optional, pro-audio port routing)
# This dependency is Linux-only - on other platforms, jack-backend feature is a no-op
[target.'cfg(target_os = "linux")'.dependencies]
jack = { version = "0.11", optional = true }

[dev-dependencies]
tempfile = "3.15"
