[package]
name = "mesh-cue"
version.workspace = true
edition.workspace = true
description = "Track preparation, BPM analysis, and playlist management for DJs"
license.workspace = true
authors.workspace = true

[lib]
name = "mesh_cue"
path = "src/lib.rs"

[[bin]]
name = "mesh-cue"
path = "src/main.rs"

# === Debian/Ubuntu packaging ===
[package.metadata.deb]
maintainer = "Mesh Team"
section = "sound"
priority = "optional"
assets = [
    ["target/release/mesh-cue", "usr/bin/", "755"],
    ["../../packaging/mesh-cue.desktop", "usr/share/applications/", "644"],
    # User should add icon: ["../../packaging/icons/mesh-cue.png", "usr/share/icons/hicolor/256x256/apps/", "644"],
]
# $auto detects library dependencies, then we add explicit audio/graphics deps
depends = "$auto, libjack-jackd2-0 (>= 1.9.12) | pipewire-jack, libvulkan1, libxkbcommon0, libwayland-client0, libasound2, libfontconfig1"

# === Fedora/RHEL packaging ===
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/mesh-cue", dest = "/usr/bin/mesh-cue", mode = "755" },
    { source = "../../packaging/mesh-cue.desktop", dest = "/usr/share/applications/mesh-cue.desktop", mode = "644" },
    # User should add icon: { source = "../../packaging/icons/mesh-cue.png", dest = "/usr/share/icons/hicolor/256x256/apps/mesh-cue.png", mode = "644" },
]

[package.metadata.generate-rpm.requires]
jack-audio-connection-kit = ">= 1.9.12"
vulkan-loader = "*"
libxkbcommon = "*"
libwayland-client = "*"
alsa-lib = "*"
fontconfig = "*"

[dependencies]
mesh-core.workspace = true
mesh-widgets.workspace = true
iced.workspace = true
jack.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log = "0.4"
env_logger = "0.11"
basedrop = "0.1"
rtrb = "0.3"

# Audio analysis - Essentia bindings
essentia = "0.1.5"
essentia-sys = "0.1.5"  # For StereoSample type in LUFS measurement

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
dirs = "5.0"

# Parallel processing
rayon.workspace = true
# Process-based parallelism (Essentia is not thread-safe)
procspawn = "1.0"
serde_json = "1.0"

[features]
default = []
