[package]
name = "mesh-midi"
version.workspace = true
edition.workspace = true
description = "MIDI controller support for mesh DJ application"

[dependencies]
# MIDI I/O and parsing
midir = "0.10"
midly = "0.5"

# Async-capable channel for callback → app bridge
flume = "0.11"

# Serialization for config
serde.workspace = true
serde_yaml.workspace = true

# Error handling and utilities
thiserror.workspace = true
anyhow.workspace = true
dirs.workspace = true
log = "0.4"

[dev-dependencies]
env_logger = "0.11"
