[package]
name = "mesh-midi"
version.workspace = true
edition.workspace = true
description = "MIDI controller support for mesh DJ application"

[features]
# Real-time thread pinning for embedded (OrangePi 5 / RK3588 big.LITTLE)
embedded-rt = ["dep:libc"]

[dependencies]
# MIDI I/O and parsing
midir = "0.10"
midly = "0.5"

# Async-capable channel for callback → app bridge
flume = "0.11"

# Serialization for config
serde.workspace = true
serde_yaml.workspace = true

# Error handling and utilities
thiserror.workspace = true
anyhow.workspace = true
dirs.workspace = true
log = "0.4"

# HID device I/O — platform-specific backend selection
[target.'cfg(target_os = "linux")'.dependencies]
hidapi = { version = "2.6", default-features = false, features = ["linux-static-hidraw"] }
libc = { version = "0.2", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
hidapi = { version = "2.6" }

[dev-dependencies]
env_logger = "0.11"
