[package]
name = "mesh-player"
version.workspace = true
edition.workspace = true
description = "4-deck stem-based DJ mixing with neural effects"
license.workspace = true
authors.workspace = true

[features]
# JACK backend is default for Linux; on Windows/macOS it's a no-op (uses CPAL)
# Use --no-default-features for CPAL-only builds
default = ["jack-backend"]
# Use native JACK backend on Linux for pro-audio port routing
# Enables port-level selection (e.g., Scarlett 18i20 outputs 1-2 vs 3-4)
jack-backend = ["mesh-core/jack-backend"]

[[bin]]
name = "mesh-player"
path = "src/main.rs"

# === Debian/Ubuntu packaging ===
[package.metadata.deb]
maintainer = "Mesh Team"
section = "sound"
priority = "optional"
assets = [
    ["target/release/mesh-player", "usr/bin/", "755"],
    ["../../packaging/mesh-player.desktop", "usr/share/applications/", "644"],
    # User should add icon: ["../../packaging/icons/mesh-player.png", "usr/share/icons/hicolor/256x256/apps/", "644"],
]
# $auto detects library dependencies, then we add explicit audio/graphics deps
# Uses ALSA via CPAL - works with PipeWire's ALSA compatibility layer
depends = "$auto, libasound2, libvulkan1, libxkbcommon0, libwayland-client0, libfontconfig1"

# === Fedora/RHEL packaging ===
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/mesh-player", dest = "/usr/bin/mesh-player", mode = "755" },
    { source = "../../packaging/mesh-player.desktop", dest = "/usr/share/applications/mesh-player.desktop", mode = "644" },
    # User should add icon: { source = "../../packaging/icons/mesh-player.png", dest = "/usr/share/icons/hicolor/256x256/apps/mesh-player.png", mode = "644" },
]

[package.metadata.generate-rpm.requires]
# Uses ALSA via CPAL - works with PipeWire's ALSA compatibility layer
vulkan-loader = "*"
libxkbcommon = "*"
libwayland-client = "*"
alsa-lib = "*"
fontconfig = "*"

[dependencies]
rtrb.workspace = true
mesh-core.workspace = true
mesh-widgets.workspace = true
mesh-midi = { path = "../mesh-midi" }
iced.workspace = true
tokio.workspace = true
rayon.workspace = true
basedrop = "0.1"
log = "0.4"
env_logger = "0.11"
anyhow.workspace = true
serde.workspace = true
serde_yaml.workspace = true
dirs.workspace = true
