[package]
name = "mesh-widgets"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared UI widgets for mesh audio applications"

[dependencies]
iced.workspace = true
mesh-core.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
basedrop = "0.1"
log = "0.4"
