[package]
name = "mesh-widgets"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared UI widgets for mesh audio applications"

[dependencies]
iced.workspace = true
mesh-core = { workspace = true, default-features = false }
serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
basedrop = "0.1"
log = "0.4"
wgpu = "27"
bytemuck = { version = "1.14", features = ["derive"] }
